# sdlamp

./: .gitignore  CMakeLists.txt  LICENSE.txt  patrons.txt  sdlamp.c
youtube/: ffmpeg_concat_xfade.py  make-credits-video.pl
